frame/support/test/tests/pallet_ui/error_wrong_item_name.stderr
error: expected `Error`
  --> $DIR/error_wrong_item_name.rs:19:11
   |
19 |     pub enum Foo<T> {}
   |              ^^^
